# Chatlis

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  ChatDialog.cpp  ChatDialog.h  Chatlis.sln  Client.h  NetworkMessage.h  QChatRoomMainWindow.cpp  QChatRoomMainWindow.h  QChatbox.cpp  QChatbox.h  QClient.cpp  QClient.h  QClientInfo.cpp  QClientInfo.h  QClientMessage.cpp  QClientMessage.h  QParticipantsPanel.h  README.md  Server.cpp  Server.h  main.cpp
CLI-Server/: QChatlisServer.cpp  QChatlisServer.h  QClientConnection.cpp  QClientConnection.h  main.cpp
Chatlis-client/: CMakeLists.txt  Chatlis-client.vcxproj  Chatlis-client.vcxproj.filters
Chatlis-client/Headers/: QChatRoomMainWindow.h  QChatWidget.h  QChatbox.h  QChatlisMenuBar.h  QServerConnection.h
Chatlis-client/Resources/: Chatlis-client.rc  resource.h
Chatlis-client/Source/: QChatRoomMainWindow.cpp  QChatWidget.cpp  QChatbox.cpp  QChatlisMenuBar.cpp  QParticipantsPanel.cpp  QServerConnection.cpp  main.cpp
Chatlis-client/resources/: CMakeLists.txt  client.rc
Chatlis-client/src/: QChatRoomMainWindow.cpp  QChatRoomMainWindow.h  QChatWidget.cpp  QChatWidget.h  QChatbox.cpp  QChatbox.h  QChatlisMenuBar.cpp  QChatlisMenuBar.h  QParticipantLabel.hpp  QParticipantsPanel.cpp  QParticipantsPanel.h  QServerConnection.cpp  QServerConnection.h  main.cpp
Chatlis-server/: CMakeLists.txt  Chatlis-CLI.vcxproj  Chatlis-CLI.vcxproj.filters  Chatlis-server.vcxproj  Chatlis-server.vcxproj.filters
Chatlis-server/Headers/: QChatlisServer-CLI.h  QClientConnection.h  QServerMainWindow.h
Chatlis-server/Resources/: Chatlis-server.rc  resource.h
Chatlis-server/Source/: QChatlisServer-CLI.cpp  QChatlisServer.cpp  QClientConnection.cpp  QServerMainWindow.cpp  main-CLI.cpp  main.cpp
Chatlis-server/resources/: CMakeLists.txt  server.rc
Chatlis-server/resources/SSL/: server.pem
Chatlis-server/src/: QChatlisServer-CLI.cpp  QChatlisServer-CLI.h  QChatlisServer.cpp  QChatlisServer.hpp  QClientConnection.cpp  QClientConnection.h  QServerMainWindow.cpp  QServerMainWindow.h  QServerMainWindow.hpp  main-CLI.cpp  main.cpp
Client/: ChatDialog.cpp  ChatDialog.h  Client.cpp  Client.h  Connection.cpp  Connection.h  PeerManager.cpp  PeerManager.h  QChatRoomMainWindow.cpp  QChatRoomMainWindow.h  QChatWidget.cpp  QChatWidget.h  QChatbox.cpp  QChatbox.h  QChatlisMenuBar.cpp  QChatlisMenuBar.h  QParticipantsPanel.cpp  QParticipantsPanel.h  QServerConnection.cpp  QServerConnection.h  main.cpp
Common/: NetworkMessageType.h  QClientInfo.h
Common/SSL/: rootCA.key  rootCA.pem
SSL/: blue_ca.pem  blue_local.key  blue_local.pem  blue_local.req  blue_privkey.pem  client1.csr  red_ca.pem  red_local.key  red_local.pem  red_local.req  red_privkey.pem  server.key
Server/: QChatlisServer.cpp  QChatlisServer.h  QClientConnection.cpp  QClientConnection.h  QServerMainWindow.cpp  QServerMainWindow.h  main.cpp
common/: NetworkMessage.h  QClientInfo.cpp  QClientInfo.h
common/SSL/: rootCA.pem  server.key
commone/SSL/: server.pem
